Bug 59026 - ELEMENTAL procedure with VALUE arguments emits wrong code
Summary: ELEMENTAL procedure with VALUE arguments emits wrong code
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.9.0
: P3 normal
Target Milestone: ---
Assignee: Paul Thomas
URL:
Keywords: wrong-code
Depends on:
Blocks: 29383
  Show dependency treegraph
 
Reported: 2013-11-06 19:50 UTC by Francois-Xavier Coudert
Modified: 2014-06-07 10:23 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2013-11-06 00:00:00


Attachments
Fixes the PR (346 bytes, patch)
2013-11-06 20:56 UTC, Paul Thomas
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Francois-Xavier Coudert 2013-11-06 19:50:55 UTC
The following source is compiled into wrong code:

interface
  elemental integer function foo(x)
    integer, intent(in), value :: x
  end function
end interface

  print *, foo(42)
  print *, foo([0,1])
end

For all versions of gfortran starting from 4.3 (and up to current trunk), the second call to FOO is miscompiled. Looking at the generated code (-fdump-tree-original), the first call is, as expected, by value:

      D.1882 = foo (42);
      _gfortran_transfer_integer_write (&dt_parm.0, &D.1882, 4);

while the second call is by-reference:

              D.1887 = A.2[S.3];
              D.1888 = foo (&D.1887);
              _gfortran_transfer_integer_write (&dt_parm.1, &D.1888, 4);

This can be confirmed by adding an actual FOO function such as:

elemental integer function foo(x)
  integer, intent(in), value :: x
  foo = x - 1
end function

Running the complete program then yields:

          41
  1370438451  1370438451
Comment 1 Paul Thomas 2013-11-06 20:56:25 UTC
Created attachment 31176 [details]
Fixes the PR

This is regtesting right now - I'll prepare the testcase and submit, as soon as it is done.

Best regards

Paul
Comment 2 Paul Thomas 2014-02-09 19:45:37 UTC
Author: pault
Date: Sun Feb  9 19:45:06 2014
New Revision: 207645

URL: http://gcc.gnu.org/viewcvs?rev=207645&root=gcc&view=rev
Log:
2014-02-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/59026
	* trans-expr.c (gfc_conv_procedure_call): Pass the value of the
	actual argument to a formal argument with the value attribute
	in an elemental procedure.

2014-02-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/59026
	* gfortran.dg/elemental_by_value_1.f90 : New test

Added:
    trunk/gcc/testsuite/gfortran.dg/elemental_by_value_1.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/trans-expr.c
    trunk/gcc/testsuite/ChangeLog
Comment 3 Francois-Xavier Coudert 2014-06-07 10:23:00 UTC
Was fixed on 4.9, not a regression: closing.