2014-02-09  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/59026
	* trans-expr.c (gfc_conv_procedure_call): Pass the value of the
	actual argument to a formal argument with the value attribute
	in an elemental procedure.

2014-02-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/59026
	* gfortran.dg/elemental_by_value_1.f90 : New test


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@207645 138bc75d-0d04-0410-961f-82ee72b054a4